Corrigir modelo desativado da Groq